   * Fix http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x10x27x150419 (Angel Carpintero)
   * Fix http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x11x25x102808 (Angel Carpintero)
   * Avoid random errors , initialising some structs for V4L1 
     http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x11x26x010755 (Jason Sharpee & Angel Carpintero)

3.2.9 Formal Release - Summary of Changes

Features
   * Removed debian ( to avoid conflicts with debian package) and FreeBSD
     ( no needed to deploy BSD port here ) directories. ( Angel Carpintero )
   * Added --chuid motion to debian init.d script. ( Angel Carpintero )
   * Added Flash video format (FLV) to ffmpeg.
     http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2007x07x19x131921 (Timo Taskinen).
   * Added FFV1 ( FF video codec 1 ) codec , Lossless encoding
     http://www.lavrsen.dk/twiki/bin/view/Motion/LosslessEncoding (Andrew Hamilton).


Bugfixes
   * Fix segfault in webhttpd.c on motion restart (Angel Carpintero)
   * Fix segfault in debian http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x09x24x175945
     (Angel Carpintero)
   * Fix http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=391055 , change
     motion man page , -d requieres level. (Angel Carpintero)
   * Handle mjpeg decoding and fix color issue adding mjpegtools dependecy
     http://www.lavrsen.dk/twiki/bin/view/Motion/MjpegColorIssue
     http://www.lavrsen.dk/twiki/bin/view/Motion/MjpegToYUV420pPatch
     (Marius Rieder, Angel Carpintero).
   * Add debug level > 5 to get logs from v4l2_select_input, v4l2_set_control and v4l2_set_input.
     (Angel Carpintero)


3.2.8 Formal Release - Summary of Changes

Features
   * Added connection status for all devices available from http web interface.
     (Angel Carpintero).
     http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2006x11x09x050638
   * Improved deb packaging, install the init.d script. (Angel Carpintero).